# SGMAnalysis

./: README.md  pyproject.toml
sgmanalysis/: __init__.py  plotting.py  scans.py
