[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgmanalysis"
version = "0.1.0"
authors = [
  { name="SGM Beamline", email="sgm-beamline@lightsource.ca" },
]
description = "A package for analyzing and visualizing SGM beamline data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/Canadian-Light-Source/SGMAnalysis"
"Bug Tracker" = "https://github.com/Canadian-Light-Source/SGMAnalysis/issues"
